<resources>
    <string name="app_name">Meteo Forecast</string>
    <string name="recargar">RECARGAR</string>
    <string name="mensaje_error">No se han podido cargar los datos. Inténtelo de nuevo pulsando sobre recargar</string>
    <string name="ajustes_texto">Ajustes</string>
    <string name="compartir_texto">Compartir</string>

    <string name="centigrados_label">Grados centígrados (ºC)</string>
    <string name="farenheit_label">Grados fahrenheit (ºF)</string>

    <string name="centigrados_value">Celsius</string>
    <string name="farenheit_value">Fahrenheit</string>


    <string name="ajustes_seleccion_temperatura_key">seleccion_temperatura_key</string>
    <string name="ajustes_unidades_temperatura_titulo">Unidades temperatura</string>
    <string name="ajustes_localizacion_key">ajustes_localizacion_key</string>
    <string name="ajustes_localizacion_titulo">Localizacion</string>

    <string name="DATE_ID">DATE_id</string>


    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Tormenta</string>
    <string name="condition_3xx">Llovizna</string>
    <string name="condition_500">Lluvia ligera</string>
    <string name="condition_501">Lluvia moderada</string>
    <string name="condition_502">Lluvia fuerte</string>
    <string name="condition_503">Lluvia intensa</string>
    <string name="condition_504">Lluvia extrema</string>
    <string name="condition_511">lluvia helada</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Lluvia</string>
    <string name="condition_522">Lluvia fuerte</string>
    <string name="condition_531">LLuvia irregular</string>
    <string name="condition_600">Nevada ligera</string>
    <string name="condition_601">Nevada</string>
    <string name="condition_602">Fuerte nevada</string>
    <string name="condition_611">Aguanieve</string>
    <string name="condition_612">Cellisca</string>
    <string name="condition_615">LLuvia y nieve</string> <!-- light rain and snow -->
    <string name="condition_616">LLuvia y nieve</string>
    <string name="condition_620">Precipitaciones con nieve</string> <!-- light shower snow -->
    <string name="condition_621">Precipitaciones con nieve</string>
    <string name="condition_622">Precipitaciones con nieve</string> <!-- heavy shower snow -->
    <string name="condition_701">Niebla</string>
    <string name="condition_711">Niebla cerrada</string>
    <string name="condition_721">Bruma</string>
    <string name="condition_731">Polvoriento</string>
    <string name="condition_741">Niebla</string>
    <string name="condition_751">Polvoriento</string>
    <string name="condition_761">Polvoriento</string>
    <string name="condition_762">Ceniza volcánica</string>
    <string name="condition_771">Tempestad</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Despejado</string>
    <string name="condition_801">Muy pocas nubes</string>
    <string name="condition_802">Nubes dispersas</string>
    <string name="condition_803">Nubes dispersas</string>
    <string name="condition_804">Cubierto con nubes</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tormenta tropical</string>
    <string name="condition_902">Huracán</string>
    <string name="condition_903">Helado</string>
    <string name="condition_904">Caluroso</string>
    <string name="condition_905">Ventoso</string>
    <string name="condition_906">Granizo</string>
    <string name="condition_951">Calmado</string>
    <string name="condition_952">Ligera brisa</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Brisa</string> <!-- moderate breeze -->
    <string name="condition_955">Brisa fresca</string>
    <string name="condition_956">Fuerte brisa</string>
    <string name="condition_957">Fuerte viento</string>
    <string name="condition_958">Vendaval</string>
    <string name="condition_959">Fuerte tempestad</string>
    <string name="condition_960">Tormenta</string>
    <string name="condition_961">Tormenta</string>
    <string name="condition_962">Huracán</string>
    <string name="menu_mapa">Mapa</string>
    <string name="condition_unknown">Tiempo desconocido</string>

    <!-- Texto notificacion -->
    <string name="tituloNotificacion">Pronóstico tiempo</string>
    <string name="ajustes_mostrar_notificaciones_key">ajustes_mostrar_notificaciones_key</string>
    <string name="ajustes_mostrar_notificaciones_titulo">Mostrar notificaciones</string>
    <string name="HumedadString">Humedad</string>
    <string name="PresionString">Presión</string>
    <string name="VientoString">Viento</string>
    <string name="localizacion_preferida">Peñacastillo, Es</string>


</resources>
