<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/detallesExtra"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHumedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/HumedadString"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/PresionString"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="@+id/tvHumedad"
            app:layout_constraintTop_toBottomOf="@+id/tvHumedad" />

        <TextView
            android:id="@+id/tvViento"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/VientoString"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="@+id/tvPresion"
            app:layout_constraintTop_toBottomOf="@+id/tvPresion" />

        <TextView
            android:id="@+id/tv_viento_detalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="velocidad  viento"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvViento"
            app:layout_constraintEnd_toEndOf="@+id/tv_presion_detalles"
            app:layout_constraintTop_toBottomOf="@+id/tvViento" />

        <TextView
            android:id="@+id/tv_humedad_detalles"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:padding="10dp"
            android:text="humedad"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvHumedad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHumedad" />

        <TextView
            android:id="@+id/tv_presion_detalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="presion"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPresion"
            app:layout_constraintEnd_toEndOf="@+id/tv_humedad_detalles"
            app:layout_constraintTop_toBottomOf="@+id/tvPresion" />

    </android.support.constraint.ConstraintLayout>
</layout>